--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -141,6 +141,7 @@
                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="Osy-gJ-f6f" appends="YES" id="ds3-PD-6J4"/>
+                                            <outletCollection property="gestureRecognizers" destination="7ud-cU-hsP" appends="YES" id="gFV-z6-Qp5"/>
                                         </connections>
                                     </textField>
                                 </subviews>
@@ -173,6 +174,11 @@
                         <action selector="panText:" destination="96O-5S-Syf" id="HvB-Dx-Aqq"/>
                     </connections>
                 </panGestureRecognizer>
+                <rotationGestureRecognizer id="7ud-cU-hsP" userLabel="Text Field Rotate Gesture">
+                    <connections>
+                        <action selector="rotateText:" destination="96O-5S-Syf" id="uLe-fP-fSa"/>
+                    </connections>
+                </rotationGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1850.5" y="995.5"/>
         </scene>
