--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -142,6 +142,7 @@
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="Osy-gJ-f6f" appends="YES" id="ds3-PD-6J4"/>
                                             <outletCollection property="gestureRecognizers" destination="7ud-cU-hsP" appends="YES" id="gFV-z6-Qp5"/>
+                                            <outletCollection property="gestureRecognizers" destination="QEu-Wp-VNZ" appends="YES" id="wG5-xL-9jl"/>
                                         </connections>
                                     </textField>
                                 </subviews>
@@ -179,6 +180,11 @@
                         <action selector="rotateText:" destination="96O-5S-Syf" id="uLe-fP-fSa"/>
                     </connections>
                 </rotationGestureRecognizer>
+                <pinchGestureRecognizer id="QEu-Wp-VNZ" userLabel="Text Field Pinch Gesture">
+                    <connections>
+                        <action selector="pinchText:" destination="96O-5S-Syf" id="PiZ-hu-5XQ"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1850.5" y="995.5"/>
         </scene>
